Fix menu bar anchor tag value alignment

--- a/css/header.css
+++ b/css/header.css
@@ -34,6 +34,7 @@
 .top-bar li {
     display: inline;
     padding: 1em;
+    margin-right:-10px;
     transition: background 0.4s linear 0s, color 0.3s linear 0s;
 }
 
